--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -59,6 +59,10 @@ header {
     margin: 0 24px;
     padding: 4px;
     width: 56px;
+
+    &:hover {
+      opacity: 0.7;
+    }
   }
 
   input:checked {
@@ -118,7 +122,7 @@ main {
     justify-content: center;
     margin: 0 0 32px;
 
-    span {
+    .dollar {
       font-size: 40px;
       margin-right: 7px;
     }
@@ -165,6 +169,13 @@ main {
   button {
     background: $primary-gradient;
     color: #fff;
+
+    &:hover {
+      background: transparent;
+      border: 1px solid hsl(237, 63%, 64%);
+      color: hsl(237, 63%, 64%);
+      padding: 13px 0;
+    }
   }
 }
 
@@ -191,5 +202,32 @@ main {
   button {
     background: #fff;
     color: hsl(237, 63%, 64%);
+
+    &:hover {
+      background: transparent;
+      border: 1px solid #fff;
+      color: #fff;
+      padding: 13px 0;
+    }
+  }
+}
+
+.monthly {
+  .monthly-price {
+    display: inline;
+  }
+
+  .annually-price {
+    display: none;
+  }
+}
+
+.annually {
+  .monthly-price {
+    display: none;
+  }
+
+  .annually-price {
+    display: inline;
   }
 }
